fixed POST /users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/shopme
+spring.datasource.url=jdbc:postgresql://localhost:5432/fielamigo_db
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=root
