Added endpoints to create a new user and verify the code sent to the email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/fielamigo_db
 spring.datasource.username=postgres
 spring.datasource.password=root
+
+# Spring Boot mail configuration
+spring.mail.host=127.0.0.1
+spring.mail.port=1025
+
+# Spring Boot configuration for Gmail
+# spring.mail.host=smtp.gmail.com
+# spring.mail.port=587
+# spring.mail.username=USERNAME
+# spring.mail.password=PASSWORD
