--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/fielamigo_db
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.config.import=file:.env[.properties]
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # Spring Boot mail configuration
 spring.mail.host=127.0.0.1
@@ -11,3 +13,8 @@ spring.mail.port=1025
 # spring.mail.port=587
 # spring.mail.username=USERNAME
 # spring.mail.password=PASSWORD
+
+# Amazon S3 configuration
+aws.access.key.id=${AWS_ACCESS_KEY_ID}
+aws.secret.key=${AWS_SECRET_KEY}
+aws.s3.bucket=${AWS_S3_BUCKET}
